--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body{
 /* HEADER
 /*******************************************/
 
-header{
+#home-header{
   text-align: center;
   height: 650px;
   padding-top: 50px;
@@ -178,6 +178,7 @@ header, .main-nav-scrolled {
 /******************************************
 /* BODY - DIV(IMAGE) HOVER
 /*******************************************/
+
 .photo-grid figure {
   height: 350px;
   width: 550px;
@@ -226,22 +227,6 @@ header, .main-nav-scrolled {
   transform: translateY(40px);
 }
 
-/******************************************
-/* BODY - TITLE STAGNANT
-/*******************************************/
-
-.title p{
-  margin-top: 150px;
-  font-family: 'Shadows Into Light Two', cursive;
-  font-size: 3.0em;
-  color: white;
-  background-color: rgba(0,0,0,0.2);
-  width: 40%;
-  margin-left: 170px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border: 2px solid white;
-}
 
 /******************************************
 /* HOVER EFFECT STYLE CLASSES
@@ -291,9 +276,62 @@ header, .main-nav-scrolled {
 /******************************************
 /* MEDIA QUERY
 /*******************************************/
+
+/* BODY - TITLE STAGNANT */
+
 @media (max-width: 700px){
 
-/* Hamburger */
+  .photo-grid figcaption {
+    background: rgba(0,0,0,0.0);
+    opacity: 1;
+  }
+
+  .photo-grid figcaption p {
+    position: relative;
+    width: 550px;
+    vertical-align: middle;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    padding-top: 10px;
+  }
+
+  .photo-grid figure:hover figcaption p {
+    -moz-transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+
+  .title a{
+    text-decoration: none;
+  }
+
+  .title p{
+    margin-top: 175px;
+    font-family: 'Shadows Into Light Two', cursive;
+    font-size: 3.0em;
+    color: white;
+    background-color: rgba(0,0,0,0.2);
+    padding-bottom: 10px;
+    border: 2px solid white;
+  }
+
+  #home-header{
+    height: 500px;
+  }
+
+  body{
+    padding-top: 500px;
+  }
+  .main div{
+    display: block;
+  }
+}
+
+/*
+@media (max-width: 700px){
+
+/* Hamburger 
   .line{
     width: 2.5em;
     height: .2em;
@@ -337,5 +375,7 @@ header, .main-nav-scrolled {
     background-color: rgba(0,0,0,0.7);
     text-align: center;
   }
+*/
+
 
 }
