--- a/css/destination.css
+++ b/css/destination.css
@@ -169,11 +169,11 @@ h3{
 /******************************************
 /* BODY - PHOTO GRID
 /*******************************************/
-/*
+
 ul.rig {
   list-style: none;
   font-size: 0px;
-  margin-left: -0.5%; /* should match li left margin 
+  margin-left: -0.5%; /* should match li left margin  */
 }
 ul.rig li {
   display: inline-block;
@@ -201,45 +201,9 @@ ul.rig li p {
   color: #999;
 }
 
-/* class for 2 columns 
-ul.rig.columns-2 li {
-  width: 49.5%; /* this value + 2.5 should = 50% 
-}
-*/
-ul.rig {
-  list-style: none;
-  font-size: 0px;
-  margin-left: -2.5%; /* should match li left margin */
-}
-ul.rig li {
-  display: inline-block;
-  padding: 10px;
-  margin: 0 0 2.5% 2.5%;
-  background: #fff;
-  border: 1px solid #ddd;
-  font-size: 16px;
-  font-size: 1rem;
-  vertical-align: top;
-  box-shadow: 0 0 5px #ddd;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-}
-ul.rig li img {
-  max-width: 100%;
-  height: auto;
-  margin: 0 0 10px;
-}
-
-ul.rig li p {
-  font-size: .9em;
-  line-height: 1.5em;
-  color: #999;
-}
-
 /* class for 2 columns */
 ul.rig.columns-2 li {
-  width: 47.5%; /* this value + 2.5 should = 50% */
+  width: 49.5%; /* this value + 2.5 should = 50% */
 }
 
 /******************************************
@@ -301,7 +265,7 @@ ul.rig.columns-2 li {
 /******************************************
 /* MEDIA QUERY
 /*******************************************/
-/*
+
 @media (max-width: 700px) {
   ul.grid-nav li {
     display: block;
@@ -314,7 +278,7 @@ ul.rig.columns-2 li {
     margin-left: 0;
   }
   ul.rig li {
-    width: 100% !important; /* over-ride all li styles 
+    width: 100% !important; /* over-ride all li styles */
     margin: 0 0 20px;
   }
 
@@ -357,7 +321,7 @@ ul.rig.columns-2 li {
     font-size: 5em;
   }
 }
-*/
+
 @media (max-width: 480px) {
   ul.grid-nav li {
     display: block;
