removed main class css properties

--- a/css/destination.css
+++ b/css/destination.css
@@ -207,7 +207,7 @@ ul.rig.columns-2 li {
 }
 
 /******************************************
-/* BODY - PHOTO GRID CAPTIONS
+/* BODY - PHOTO GRID CAPTIONS HOVER EFFECT (removed this)
 /*******************************************/
 /*
 .photo-grid figure {
