--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ header, .main-nav-scrolled {
 .main {
   background: white;
   margin-top: 50px;
+  text-align: center;
 }
 
 /******************************************
