changed caption color

--- a/css/destination.css
+++ b/css/destination.css
@@ -207,6 +207,7 @@ ul.rig li p {
 /* class for 2 columns */
 ul.rig.columns-2 li {
   width: 49.5%; /* this value + 2.5 should = 50% */
+  background: rgba(0,0,0,1);
 }
 
 /******************************************
